es nodes uid/gid