@@ -708,6 +708,10 @@ The cluster shard limit defaults to 1000 shards per non-frozen data node for nor
 
 #JVM参数
 
+----------------------
+
+#13.3版本需要单独建文件
+
 #默认不修改
 
 #如果需要手动设置JVM 堆大小
@@ -735,6 +739,39 @@ EOF
 ```yaml
 
 
+```
+
+
+
+--------------------------
+
+#7.7.1
+
+#直接修改jvm.options
+
+```bash
+[elasticsearch@escluster01 config]$ cat jvm.options|grep -v ^#|grep -v ^$
+-Xms15g
+-Xmx15g
+8-13:-XX:+UseConcMarkSweepGC
+8-13:-XX:CMSInitiatingOccupancyFraction=75
+8-13:-XX:+UseCMSInitiatingOccupancyOnly
+14-:-XX:+UseG1GC
+14-:-XX:G1ReservePercent=25
+14-:-XX:InitiatingHeapOccupancyPercent=30
+-Djava.io.tmpdir=${ES_TMPDIR}
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/data/data/
+-XX:ErrorFile=logs/hs_err_pid%p.log
+8:-XX:+PrintGCDetails
+8:-XX:+PrintGCDateStamps
+8:-XX:+PrintTenuringDistribution
+8:-XX:+PrintGCApplicationStoppedTime
+8:-Xloggc:logs/gc.log
+8:-XX:+UseGCLogFileRotation
+8:-XX:NumberOfGCLogFiles=32
+8:-XX:GCLogFileSize=64m
+9-:-Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m
 ```
 
 
@@ -854,7 +891,8 @@ http://10.40.10.126:9200/_nodes/stats
 #官网
 
 ```
-https://www.elastic.co/guide/en/kibana/8.13/get-started.html
+#https://www.elastic.co/guide/en/kibana/8.13/get-started.html
+https://www.elastic.co/guide/en/kibana/7.17/get-started.html
 ```
 
 
@@ -879,9 +917,10 @@ chown -R elasticsearch:elasticsearch /opt/kibana
 su - elasticsearch
 cd /opt/soft
 
-wget https://artifacts.elastic.co/downloads/kibana/kibana-8.13.3-linux-x86_64.tar.gz
+#wget https://artifacts.elastic.co/downloads/kibana/kibana-8.13.3-linux-x86_64.tar.gz
+wget https://artifacts.elastic.co/downloads/kibana/kibana-7.7.1-linux-x86_64.tar.gz
 
-tar -zxvf kibana-8.13.3-linux-x86_64.tar.gz -C  /opt/kibana --strip-components=1
+tar -zxvf kibana-7.7.1-linux-x86_64.tar.gz -C  /opt/kibana --strip-components=1
 ```
 
 
@@ -895,10 +934,12 @@ tar -zxvf kibana-8.13.3-linux-x86_64.tar.gz -C  /opt/kibana --strip-components=1
 server.host: "10.40.10.124"
 
 #访问URL
-server.publicBaseUrl: "http://10.40.10.124:5601"
+#8.13版本参数，7.7.1没有该项参数
+#server.publicBaseUrl: "http://10.40.10.124:5601"
 
 #添加一个elasticsearch节点的IP即可
-elasticsearch.hosts: ["http://10.40.10.124:9200"]
+#elasticsearch.hosts: ["http://10.40.10.124:9200"]
+elasticsearch.hosts: ["http://10.40.10.124:9200","http://10.40.10.125:9200","http://10.40.10.126:9200"]
 
 #es超时设置Client request timeout
 elasticsearch.requestTimeout: 3000000
@@ -909,6 +950,8 @@ elasticsearch.requestTimeout: 3000000
 i18n.locale: "zh-CN"
 
 #log
+-----------
+#8.13
 logging.appenders.default:
   type: rolling-file
   fileName: /data/log/kibana.log
@@ -920,6 +963,65 @@ logging.appenders.default:
     max: 10
   layout:
     type: json
+-----------------
+
+#7.7.1
+#logging.dest: stdout
+logging.dest: /data/log/kibana.log
+
+-----------
+logging:
+  appenders:
+    file:
+      type: file
+      fileName: /data/log/kibana.log
+      layout:
+        type: pattern
+  root:
+    appenders: [default, file]
+
+---------
+logging:
+  appenders:
+    console:
+      type: console
+      layout:
+        type: pattern
+        highlight: true
+    file:
+      type: file
+      fileName: /data/log/kibana.log
+    custom:
+      type: console
+      layout:
+        type: pattern
+        pattern: "[%date][%level] %message"
+    json-file-appender:
+      type: file
+      fileName: /data/log/kibana-json.log
+      layout:
+        type: json
+
+  root:
+    appenders: [default, console, file]
+    level: error
+
+  loggers:
+    - name: plugins
+      appenders: [custom]
+      level: warn
+    - name: plugins.myPlugin
+      level: info
+    - name: server
+      level: fatal
+    - name: optimize
+      appenders: [console]
+    - name: telemetry
+      appenders: [json-file-appender]
+      level: all
+    - name: metrics.ops
+      appenders: [console]
+      level: debug
 ```
 
 
@@ -973,7 +1075,8 @@ mkdir ik
 
 cd ik
 
-wget https://release.infinilabs.com/analysis-ik/stable/elasticsearch-analysis-ik-8.13.3.zip
+#wget https://release.infinilabs.com/analysis-ik/stable/elasticsearch-analysis-ik-8.13.3.zip
+wget https://release.infinilabs.com/analysis-ik/stable/elasticsearch-analysis-ik-7.7.1.zip
 
 unzip elasticsearch-analysis-ik-8.13.3.zip
 
@@ -1350,7 +1453,206 @@ showmount -e
 
 #all_squash 表示客户机写入nfs的数据全部映射为nobody用户 这里设置 all_squash并把目录设置为777 是为防止elasticsearch 集群的每个节点启动的uid和gid 不一致导致在创建快照仓库时无法创建成功
 
-#在这里说明下，并不是要求elasticsearch集群中中每个节点启动的用户id和group id 必须是一致的 只要写入的文件是同一个用户即可，所以这里设置all_squash
+#uid/gid不同时，快照存储库验证失败
+
+```bash
+[elasticsearch@escluster01 log]$ id elasticsearch
+uid=1001(elasticsearch) gid=1001(elasticsearch) groups=1001(elasticsearch)
+
+[elasticsearch@escluster02 log]$ id elasticsearch
+uid=1001(elasticsearch) gid=1001(elasticsearch) groups=1001(elasticsearch)
+
+#escluster03 uid/gid被oracle用户占用
+[elasticsearch@escluster03 log]$ id elasticsearch
+uid=1002(elasticsearch) gid=1003(elasticsearch) groups=1003(elasticsearch)
+[elasticsearch@escluster03 log]$ id 1001
+uid=1001(oracle) gid=1002(oinstall) groups=1002(oinstall),1001(dba)
+
+#此时快照存储库验证报错
+{
+  "error": {
+    "root_cause": [
+      {
+        "type": "repository_verification_exception",
+        "reason": "[es-snp] [[a1DK8XclQean8VwNoXzK3w, 'RemoteTransportException[[node-3][10.40.10.126:9300][internal:admin/repository/verify]]; nested: RepositoryVerificationException[[es-snp] store location [/snp] is not accessible on the node [{node-3}{a1DK8XclQean8VwNoXzK3w}{Eb4f6ayoQmKiR_KZmNwMLw}{10.40.10.126}{10.40.10.126:9300}{dilmrt}{ml.machine_memory=33697431552, xpack.installed=true, transform.node=true, ml.max_open_jobs=20}]]; nested: AccessDeniedException[/snp/tests-rdy0HhrJSxKNL23xkkeSYQ/data-a1DK8XclQean8VwNoXzK3w.dat];']]"
+      }
+    ],
+    "type": "repository_verification_exception",
+    "reason": "[es-snp] [[a1DK8XclQean8VwNoXzK3w, 'RemoteTransportException[[node-3][10.40.10.126:9300][internal:admin/repository/verify]]; nested: RepositoryVerificationException[[es-snp] store location [/snp] is not accessible on the node [{node-3}{a1DK8XclQean8VwNoXzK3w}{Eb4f6ayoQmKiR_KZmNwMLw}{10.40.10.126}{10.40.10.126:9300}{dilmrt}{ml.machine_memory=33697431552, xpack.installed=true, transform.node=true, ml.max_open_jobs=20}]]; nested: AccessDeniedException[/snp/tests-rdy0HhrJSxKNL23xkkeSYQ/data-a1DK8XclQean8VwNoXzK3w.dat];']]"
+  },
+  "status": 500
+}
+
+
+#es报错日志
+
+[2024-07-17T15:24:34,857][WARN ][r.suppressed             ] [node-2] path: /_snapshot/es-snp/_verify, params: {repository=es-snp}
+org.elasticsearch.repositories.RepositoryVerificationException: [es-snp] [[a1DK8XclQean8VwNoXzK3w, 'RemoteTransportException[[node-3][10.40.10.126:9300][internal:admin/repository/verify]]; nested: RepositoryVerificationException[[es-snp] store location [/snp] is not accessible on the node [{node-3}{a1DK8XclQean8VwNoXzK3w}{Eb4f6ayoQmKiR_KZmNwMLw}{10.40.10.126}{10.40.10.126:9300}{dilmrt}{ml.machine_memory=33697431552, xpack.installed=true, transform.node=true, ml.max_open_jobs=20}]]; nested: AccessDeniedException[/snp/tests-rdy0HhrJSxKNL23xkkeSYQ/data-a1DK8XclQean8VwNoXzK3w.dat];']]
+        at org.elasticsearch.repositories.VerifyNodeRepositoryAction.finishVerification(VerifyNodeRepositoryAction.java:118) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.repositories.VerifyNodeRepositoryAction.access$000(VerifyNodeRepositoryAction.java:49) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.repositories.VerifyNodeRepositoryAction$1.handleResponse(VerifyNodeRepositoryAction.java:99) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.repositories.VerifyNodeRepositoryAction$1.handleResponse(VerifyNodeRepositoryAction.java:95) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.TransportService$ContextRestoreResponseHandler.handleResponse(TransportService.java:1129) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.InboundHandler$1.doRun(InboundHandler.java:222) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.common.util.concurrent.AbstractRunnable.run(AbstractRunnable.java:37) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.common.util.concurrent.EsExecutors$DirectExecutorService.execute(EsExecutors.java:225) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.InboundHandler.handleResponse(InboundHandler.java:214) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.InboundHandler.messageReceived(InboundHandler.java:139) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.InboundHandler.inboundMessage(InboundHandler.java:103) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.TcpTransport.inboundMessage(TcpTransport.java:676) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.netty4.Netty4MessageChannelHandler.channelRead(Netty4MessageChannelHandler.java:62) [transport-netty4-client-7.7.1.jar:7.7.1]
+        at io.netty.channel.AbstractChannelHandlerContext.invokeChannelRead(AbstractChannelHandlerContext.java:377) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.invokeChannelRead(AbstractChannelHandlerContext.java:363) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.fireChannelRead(AbstractChannelHandlerContext.java:355) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.handler.codec.ByteToMessageDecoder.fireChannelRead(ByteToMessageDecoder.java:321) [netty-codec-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.handler.codec.ByteToMessageDecoder.channelRead(ByteToMessageDecoder.java:295) [netty-codec-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.invokeChannelRead(AbstractChannelHandlerContext.java:377) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.invokeChannelRead(AbstractChannelHandlerContext.java:363) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.fireChannelRead(AbstractChannelHandlerContext.java:355) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.handler.logging.LoggingHandler.channelRead(LoggingHandler.java:227) [netty-handler-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.invokeChannelRead(AbstractChannelHandlerContext.java:377) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.invokeChannelRead(AbstractChannelHandlerContext.java:363) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.fireChannelRead(AbstractChannelHandlerContext.java:355) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.DefaultChannelPipeline$HeadContext.channelRead(DefaultChannelPipeline.java:1410) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.invokeChannelRead(AbstractChannelHandlerContext.java:377) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.AbstractChannelHandlerContext.invokeChannelRead(AbstractChannelHandlerContext.java:363) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.DefaultChannelPipeline.fireChannelRead(DefaultChannelPipeline.java:919) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.nio.AbstractNioByteChannel$NioByteUnsafe.read(AbstractNioByteChannel.java:163) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.nio.NioEventLoop.processSelectedKey(NioEventLoop.java:714) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.nio.NioEventLoop.processSelectedKeysPlain(NioEventLoop.java:615) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.nio.NioEventLoop.processSelectedKeys(NioEventLoop.java:578) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.channel.nio.NioEventLoop.run(NioEventLoop.java:493) [netty-transport-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.util.concurrent.SingleThreadEventExecutor$4.run(SingleThreadEventExecutor.java:989) [netty-common-4.1.45.Final.jar:4.1.45.Final]
+        at io.netty.util.internal.ThreadExecutorMap$2.run(ThreadExecutorMap.java:74) [netty-common-4.1.45.Final.jar:4.1.45.Final]
+        at java.lang.Thread.run(Thread.java:832) [?:?]
+
+
+[2024-07-17T15:24:31,119][WARN ][o.e.r.VerifyNodeRepositoryAction] [node-3] [es-snp] failed to verify repository
+org.elasticsearch.repositories.RepositoryVerificationException: [es-snp] store location [/snp] is not accessible on the node [{node-3}{a1DK8XclQean8VwNoXzK3w}{Eb4f6ayoQmKiR_KZmNwMLw}{10.40.10.126}{10.40.10.126:9300}{dilmrt}{ml.machine_memory=33697431552, xpack.installed=true, transform.node=true, ml.max_open_jobs=20}]
+        at org.elasticsearch.repositories.blobstore.BlobStoreRepository.verify(BlobStoreRepository.java:1893) ~[elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.repositories.VerifyNodeRepositoryAction.doVerify(VerifyNodeRepositoryAction.java:126) ~[elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.repositories.VerifyNodeRepositoryAction.access$400(VerifyNodeRepositoryAction.java:49) ~[elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.repositories.VerifyNodeRepositoryAction$VerifyNodeRepositoryRequestHandler.messageReceived(VerifyNodeRepositoryAction.java:158) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.repositories.VerifyNodeRepositoryAction$VerifyNodeRepositoryRequestHandler.messageReceived(VerifyNodeRepositoryAction.java:153) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.RequestHandlerRegistry.processMessageReceived(RequestHandlerRegistry.java:63) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.transport.InboundHandler$RequestHandler.doRun(InboundHandler.java:264) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.common.util.concurrent.ThreadContext$ContextPreservingAbstractRunnable.doRun(ThreadContext.java:692) [elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.common.util.concurrent.AbstractRunnable.run(AbstractRunnable.java:37) [elasticsearch-7.7.1.jar:7.7.1]
+        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130) [?:?]
+        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630) [?:?]
+        at java.lang.Thread.run(Thread.java:832) [?:?]
+Caused by: java.nio.file.AccessDeniedException: /snp/tests-rdy0HhrJSxKNL23xkkeSYQ/data-a1DK8XclQean8VwNoXzK3w.dat
+        at sun.nio.fs.UnixException.translateToIOException(UnixException.java:90) ~[?:?]
+        at sun.nio.fs.UnixException.rethrowAsIOException(UnixException.java:111) ~[?:?]
+        at sun.nio.fs.UnixException.rethrowAsIOException(UnixException.java:116) ~[?:?]
+        at sun.nio.fs.UnixFileSystemProvider.newByteChannel(UnixFileSystemProvider.java:219) ~[?:?]
+        at java.nio.file.spi.FileSystemProvider.newOutputStream(FileSystemProvider.java:478) ~[?:?]
+        at java.nio.file.Files.newOutputStream(Files.java:224) ~[?:?]
+        at org.elasticsearch.common.blobstore.fs.FsBlobContainer.writeBlob(FsBlobContainer.java:161) ~[elasticsearch-7.7.1.jar:7.7.1]
+        at org.elasticsearch.repositories.blobstore.BlobStoreRepository.verify(BlobStoreRepository.java:1890) ~[elasticsearch-7.7.1.jar:7.7.1]
+        ... 11 more
+```
+
+
+
+#如果存储可以改为all_squash，那么服务器这边不用动
+
+![image-20240717163751146](es\image-20240717163751146.png)
+
+
+
+#但是如果存储为共享目录，已经有其它业务在跑，存储这边参数不建议修改，防止影响其它业务。
+
+#第二个解决办法，就是修改服务器这边的uid/gid
+
+#修改过程
+
+```bash
+#escluster03 uid/gid被oracle用户占用
+[elasticsearch@escluster03 log]$ id elasticsearch
+uid=1002(elasticsearch) gid=1003(elasticsearch) groups=1003(elasticsearch)
+[elasticsearch@escluster03 log]$ id 1001
+uid=1001(oracle) gid=1002(oinstall) groups=1002(oinstall),1001(dba)
+
+[elasticsearch@escluster03 log]$ su - root
+
+[root@escluster03 ~]# userdel -rf oracle
+[root@escluster03 ~]# groupdel dba
+[root@escluster03 ~]# groupdel oinstall
+
+
+[root@escluster03 ~]# getent passwd | awk -F: '{print $3}' | sort -n | grep 1001
+[root@escluster03 ~]# getent group | awk -F: '{print $3}' | sort -n | grep 1001
+
+[root@escluster03 ~]# getent group | awk -F: '{print $3}' | sort -n | grep 1003
+1003
+[root@escluster03 ~]# getent passwd | awk -F: '{print $3}' | sort -n | grep 1002
+1002
+[root@escluster03 ~]# systemctl stop elasticsearch.service
+
+[root@escluster03 home]# userdel -rf elasticsearch
+
+[root@escluster03 home]# getent group | awk -F: '{print $3}' | sort -n | grep 1003
+[root@escluster03 ~]# getent passwd | awk -F: '{print $3}' | sort -n | grep 1002
+
+[root@escluster03 home]#  groupadd -g 1001 elasticsearch
+[root@escluster03 home]#  useradd -u 1001 -g 1001 elasticsearch
+
+
+[root@escluster03 home]# passwd elasticsearch
+Changing password for user elasticsearch.
+New password:
+Retype new password:
+passwd: all authentication tokens updated successfully.
+
+
+#然后重新对elasticsearch用户的目录赋权下
+
+chown -R elasticsearch:elasticsearch /opt/soft
+
+chown -R elasticsearch:elasticsearch /opt/elasticsearch
+
+chown -R elasticsearch:elasticsearch /data/data
+
+chown -R elasticsearch:elasticsearch /data/log
+
+#chown -R elasticsearch:elasticsearch /opt/kibana
+
+#启动es服务
+[root@escluster03 opt]# systemctl start elasticsearch
+[root@escluster03 opt]# systemctl status elasticsearch
+● elasticsearch.service - elasticsearch
+   Loaded: loaded (/usr/lib/systemd/system/elasticsearch.service; enabled; vendor preset: disabled)
+   Active: active (running) since Wed 2024-07-17 16:24:10 CST; 3s ago
+ Main PID: 39879 (java)
+    Tasks: 37
+   CGroup: /system.slice/elasticsearch.service
+           └─39879 /opt/elasticsearch/jdk/bin/java -Xshare:auto -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava.awt.headless=true -Dfil...
+
+Jul 17 16:24:10 escluster03 systemd[1]: Started elasticsearch.
+[root@escluster03 opt]# systemctl status elasticsearch
+● elasticsearch.service - elasticsearch
+   Loaded: loaded (/usr/lib/systemd/system/elasticsearch.service; enabled; vendor preset: disabled)
+   Active: active (running) since Wed 2024-07-17 16:24:10 CST; 4s ago
+ Main PID: 39879 (java)
+    Tasks: 44
+   CGroup: /system.slice/elasticsearch.service
+           ├─39879 /opt/elasticsearch/jdk/bin/java -Xshare:auto -Des.networkaddress.cache.ttl=60 -Des.networkaddress.cache.negative.ttl=10 -XX:+AlwaysPreTouch -Xss1m -Djava.awt.headless=true -Dfil...
+           └─40143 /opt/elasticsearch/modules/x-pack-ml/platform/linux-x86_64/bin/controller
+
+Jul 17 16:24:10 escluster03 systemd[1]: Started elasticsearch.
+Jul 17 16:24:13 escluster03 elasticsearch[39879]: [2024-07-17T16:24:13,865][INFO ][o.e.e.NodeEnvironment    ] [node-3] using [1] data paths, mounts [[/ (rootfs)]], net usable_space [42...pes [rootfs]
+Jul 17 16:24:13 escluster03 elasticsearch[39879]: [2024-07-17T16:24:13,868][INFO ][o.e.e.NodeEnvironment    ] [node-3] heap size [15gb], compressed ordinary object pointers [true]
+Jul 17 16:24:13 escluster03 elasticsearch[39879]: [2024-07-17T16:24:13,995][INFO ][o.e.n.Node               ] [node-3] node name [node-3], node ID [a1DK8XclQean8VwNoXzK3w], cluster name [nwpu-es]
+Jul 17 16:24:13 escluster03 elasticsearch[39879]: [2024-07-17T16:24:13,998][INFO ][o.e.n.Node               ] [node-3] version[7.7.1], pid[39879], build[default/tar/ad56dce891c901a492b....1/14.0.1+7]
+Jul 17 16:24:13 escluster03 elasticsearch[39879]: [2024-07-17T16:24:13,998][INFO ][o.e.n.Node               ] [node-3] JVM home [/opt/elasticsearch/jdk]
+Jul 17 16:24:13 escluster03 elasticsearch[39879]: [2024-07-17T16:24:13,999][INFO ][o.e.n.Node               ] [node-3] JVM arguments [-Xshare:auto, -Des.networkaddress.cache.ttl=60, -D...tackTraceInF
+Hint: Some lines were ellipsized, use -l to show in full.
+```
+
+
+
+
 
 #### 2、每台es节点创建备份目录，并mount共享目录
 
@@ -1362,10 +1664,10 @@ chmod -R 777 /snp
 
 yum install -y nfs-utils
 
-mount -t nfs 192.168.1.227:/es /snp
+mount -t nfs 10.40.2.72:/CM_VFS1/CM_VFS1/Ecampus_NAS/Ecampus_NAS/es-snp /snp
 
 cat >> /etc/fstab <<EOF
-192.168.1.227:/es      /snp      nfs  defaults,_netdev  0 0
+10.40.2.72:/CM_VFS1/CM_VFS1/Ecampus_NAS/Ecampus_NAS/es-snp      /snp      nfs  defaults,_netdev  0 0
 EOF
 
 ```
@@ -1452,8 +1754,17 @@ curl -XGET http://10.40.10.126:9200/_snapshot/es-nfs/daily-snap-2024.05.11-pfsf0
 
 ##### 5.1、通过kibana打快照
 
+#配置完策略后，可以点击立即执行，会立即生成一份快照
+
 ```
 Management ---> Stack Management ---> Snapshot and Restore ---> 策略
+
+策略名称: daily-snap
+快照名称: <daily-snap-{now/d}>
+存储库: es_snp
+计划: 0 30 1 * * ?
+
+快照保留: 5days
 
 ---> 所有数据流和索引
 ---> 单个索引等
